<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kyma.net</groupId>
    <artifactId>kyma</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>Kyma</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>9</java.version>
        <testNG.version>6.9.10</testNG.version>
        <assertj.version>3.4.1</assertj.version>
        <mockito.verion>2.0.2-beta</mockito.verion>
        <jsoup.version>1.8.3</jsoup.version>
        <hibernate.version>5.2.8.Final</hibernate.version>
        <mySqlConnector.version>5.1.38</mySqlConnector.version>
        <maven-javadoc-plugin>2.10.4</maven-javadoc-plugin>
        <maven-surefire-plugin>2.19.1</maven-surefire-plugin>
        <maven-assembly-plugin-version>2.6</maven-assembly-plugin-version>
        <awaitility.version>1.7.0</awaitility.version>
        <jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
        <aspectj.version>1.8.9</aspectj.version>
        <jpa.version>1.0.2</jpa.version>
        <validation-api.version>1.1.0.Final</validation-api.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin}</version>
                <configuration>
                    <groups>fast</groups>
                    <includes>
                        <include>**/*Test.*</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>net.kyma.Manager</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.2</version>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>MessageBus-mvn-repo</id>
            <url>https://raw.github.com/khuzzuk/MessageBus/mvn-repo/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>FunctionalLogicRepo</id>
            <url>"https://raw.github.com/khuzzuk/functional-logic/mvn-repo/"</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
<!--
        <repository>
            <id>JAudioLayer-git-repo</id>
            <url>https://bitbucket.org/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
-->
    </repositories>

    <dependencies>
        <!--DATA-->
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>7.2.1</version>
        </dependency>

        <!--UTILITY-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.20</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.7</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jcl</artifactId>
            <version>2.11.0</version>
        </dependency>

        <!--AUDIO-->
        <dependency>
            <groupId>com.googlecode.soundlibs</groupId>
            <artifactId>jlayer</artifactId>
            <version>1.0.1.4</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.soundlibs</groupId>
            <artifactId>tritonus-share</artifactId>
            <version>0.3.7.4</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.soundlibs</groupId>
            <artifactId>mp3spi</artifactId>
            <version>1.9.5.4</version>
        </dependency>

        <!-- mvn install:install-file -Dfile=jaudiotagger-2.2.6-SNAPSHOT.jar -DgroupId=net.jthink -DartifactId=jaudiotagger -Dversion=2.2.6-SNAPSHOT -Dpackaging=jar -->
        <dependency>
            <groupId>net.jthink</groupId>
            <artifactId>jaudiotagger</artifactId>
            <version>2.2.6-SNAPSHOT</version>
        </dependency>
        <!-- mvn install:install-file -Dfile=jflac-1.3.jar -DgroupId=org.kc7bfi -DartifactId=jflac -Dversion=1.3 -Dpackaging=jar -->
        <dependency>
            <groupId>org.kc7bfi</groupId>
            <artifactId>jflac</artifactId>
            <version>1.3</version>
        </dependency>
        <!-- mvn install:install-file -Dfile=jaad-0.8.6.jar -DgroupId=net.sourceforge.jaad -DartifactId=jaad -Dversion=0.8.6 -Dpackaging=jar -->
<!--
        <dependency>
            <groupId>net.sourceforge.jaad</groupId>
            <artifactId>jaad</artifactId>
            <version>0.8.6</version>
        </dependency>
-->

        <!--GUI-->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>9.0.0</version>
        </dependency>

        <!-- message bus-->
        <dependency>
            <groupId>pl.khuzzuk</groupId>
            <artifactId>message-bus</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>pl.khuzzuk</groupId>
            <artifactId>functional-logic</artifactId>
            <version>0.2.0</version>
        </dependency>
    </dependencies>
</project>